# sistema_relat-rios-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_report.yml  weekly_report.yml
brandfield/: __init__.py  __main__.py  cli.py  pipeline.py
brandfield/collectors/: base.py  ga4.py  instagram_organic.py  meta_ads.py
brandfield/config/: loader.py  schema.py
brandfield/normalizers/: ga4.py  meta.py  models.py
brandfield/notifications/: base.py  evolution.py  factory.py  meta_whatsapp.py  null_notifier.py  twilio.py
brandfield/renderers/: html_renderer.py
brandfield/renderers/templates/: base.html  client_report.html  index.html
brandfield/storage/: base.py  json_store.py
brandfield/summary/: executive.py
clients/: _template.yml  example_client.yml
data/example_client/: snapshot_2026-03-29.json
docs/: index.html
docs/example_client/: index.html
tests/: conftest.py  test_collectors.py  test_config.py  test_ga4.py  test_normalizers.py  test_notifications.py  test_pipeline.py  test_renderer.py  test_storage.py
tests/fixtures/: instagram_organic_response.json  meta_ads_response.json
